--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -643,7 +643,7 @@ local conf = {
             provider = "googleai",
             chat = true,
             command = true,
-            model = {model = "gemini-1.5-flash-002", top_k = 40},
+            model = {model = "gemini-2.0-flash-exp", top_k = 40},
             system_prompt = general_system_prompt,
         },
         {
@@ -654,6 +654,30 @@ local conf = {
             model = {model = "gemini-1.5-flash-8b-exp-0924", top_k = 40},
             system_prompt = general_system_prompt,
         },
+        {
+            name = "Gemini-Exp",
+            provider = "googleai",
+            chat = true,
+            command = true,
+            model = {model = "gemini-exp-1206", top_k = 64},
+            system_prompt = general_system_prompt,
+        },
+        {
+            name = "Gemini-LearnLM",
+            provider = "googleai",
+            chat = true,
+            command = true,
+            model = {model = "learnlm-1.5-pro-experimental", top_k = 64},
+            system_prompt = general_system_prompt,
+        },
+        {
+            name = "Gemini-Thinking",
+            provider = "googleai",
+            chat = true,
+            command = true,
+            model = {model = "gemini-2.0-flash-thinking-exp", top_k = 64},
+            system_prompt = general_system_prompt,
+        }
     },
     hooks = {
         TranslateToJp = function(gp, params)
