--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -779,6 +779,32 @@ lua_source = '''
 local wk = require('which-key')
 local gs = require('gitsigns')
 wk.add({
+    {"<Leader>g", group = "gitsigns", mode = {"n", "v"}},
+
+    {"<Leader>gs", group = "stage", mode = {"n", "v"}},
+    {"<Leader>gsb", function() gs.stage_buffer() end, desc = "buffer"},
+    {"<Leader>gsh", function() gs.stage_hunk() end, desc = "hunk", mode = {"n", "v"}},
+    {"<Leader>gsu", function() gs.undo_stage_hunk() end, desc = "undo"},
+
+    {"<Leader>gr", group = "reset", mode = {"n", "v"}},
+    {"<Leader>grb", function() gs.reset_buffer() end, desc = "buffer"},
+    {"<Leader>grh", function() gs.reset_hunk() end, desc = "hunk", mode = {"n", "v"}},
+
+    {"<Leader>gd", group = "diff"},
+    {"<Leader>gdc", function() gs.diffthis('~') end, desc = "last commit"},
+    {"<Leader>gdi", function() gs.diffthis() end, desc = "index"},
+
+    {"<Leader>gt", group = "gitsigns (toggle)"},
+    {"<Leader>gtb", function() gs.toggle_current_line_blame() end, desc = "blame (line)"},
+    {"<Leader>gtd", function() gs.toggle_deleted() end, desc = "deleted"},
+    {"<Leader>gtl", function() gs.toggle_linehl() end, desc = "line highlight"},
+    {"<Leader>gtn", function() gs.toggle_numhl() end, desc = "num highlight"},
+    {"<Leader>gts", function() gs.toggle_signs() end, desc = "signs"},
+    {"<Leader>gtw", function() gs.toggle_word_diff() end, desc = "word diff"},
+
+    {"<Leader>gb", function() gs.blame_line{full = true} end, desc = "blame"},
+    {"<Leader>gp", function() gs.preview_hunk() end, desc = "preview"},
+
     {"<Leader>s", group = "session"},
     {"<Leader>sd", "<Cmd>DeleteSession<CR>", desc = "delete"},
     {"<Leader>sl", "<Cmd>LoadSession<CR>", desc = "load"},
