--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -824,3 +824,28 @@ wk.add({
 })
 '''
 
+[[plugins]]
+repo = 'thinca/vim-partedit'
+on_cmd = 'Partedit'
+on_func = 'partedit#'
+hook_add = '''
+let g:partedit#prefix_pattern = '\s*'
+let g:partedit#auto_prefix = 0
+let g:partedit#opener = 'split'
+'''
+[plugins.ftplugin]
+toml_mardown = '''
+nnoremap <buffer> <Leader>e <Cmd>call <SID>operator_partedit()<CR>
+function! s:operator_partedit() abort
+    let context = context_filetype#get()
+    if context.range == [[0, 0], [0, 0]]
+        echohl WarningMsg
+        echomsg 'Context is not found'
+        echohl NONE
+        return
+    endif
+    call partedit#start(context.range[0][0], context.range[1][0], #{filetype: context.filetype})
+    nnoremap <buffer><nowait> Q <Cmd>w<CR><Cmd>ParteditEnd<CR>
+endfunction
+'''
+
