--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -287,10 +287,10 @@ on_source = ['vim-vsnip']
 repo = 'osyo-manga/vim-precious'
 on_event = 'CursorMoved'
 hook_source = '''
-    let g:precious_enable_switch_CursorMoved = #{
-        \ *: 0,
-        \ help: 1,
-        \ toml: 1,
+    let g:precious_enable_switch_CursorMoved = {
+        \ '*': 0,
+        \ 'help': 1,
+        \ 'toml': 1,
     \ }
 
     augroup precious
