feat: use latest version of gemini-2.0-flash-thinking-exp in gp.nvim

--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -664,7 +664,7 @@ local conf = {
             provider = "googleai",
             chat = true,
             command = true,
-            model = {model = "gemini-2.0-flash-thinking-exp", top_k = 64},
+            model = {model = "gemini-2.0-flash-thinking-exp-01-21", top_k = 64},
             system_prompt = general_system_prompt,
         }
     },
