fix: use default_system_prompt as function

--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -763,9 +763,9 @@ require('codecompanion').setup({
         agent = {adapter = "gemini",},
     },
     opts = {
-        system_prompt = function ()
+        system_prompt = function (opts)
             local my_system_prompt = LoadTextFile("generalSystemPrompt.md")
-            return default_system_prompt .. '\n\n' .. my_system_prompt
+            return default_system_prompt(opts) .. '\n\n' .. my_system_prompt
         end,
     },
 })
