feat: add cabbrev for CodeCompanionCmd command

--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -685,6 +685,7 @@ require('codecompanion').setup({
 vim.cmd('cabbrev cci CodeCompanion')
 vim.cmd('cabbrev ccc CodeCompanionChat')
 vim.cmd('cabbrev cca CodeCompanionActions')
+vim.cmd('cabbrev ccx CodeCompanionCmd')
 '''
 
 [[plugins]]
