feat: refine startuptime of lazy loading plugins

--- a/.vim/toml/submode_lazy.toml
+++ b/.vim/toml/submode_lazy.toml
@@ -1,6 +1,6 @@
 [[plugins]]
 repo = 'kana/vim-submode'
-on_event = ['VimEnter']
+on_event = ['CursorHold']
 hook_source = '''
     "window
     nnoremap s <Nop>
