--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -31,7 +31,7 @@ on_cmd = ['Repl', 'ReplAuto']
 
 [[plugins]]
 repo = 'AndrewRadev/linediff.vim'
-on_event = ['InsertEnter', 'CursorMoved']
+on_event = ['CursorMoved']
 hook_source = '''
     let g:linediff_first_buffer_command = 'leftabove new'
     let g:linediff_second_buffer_command = 'rightbelow vertical new'
@@ -67,7 +67,7 @@ hook_source = '''
 
 [[plugins]]
 repo = 'williamboman/mason.nvim'
-on_event = ['CursorHold', 'InsertEnter', 'BufRead']
+on_event = ['CursorHold', 'InsertEnter', 'BufReadPost', 'BufNewFile']
 on_cmd = ['Mason', 'MasonInstall', 'MasonUninstall', 'MasonUninstallAll', 'MasonLog']
 
 [[plugins]]
@@ -86,7 +86,7 @@ lspinfo = '''
 [[plugins]]
 repo = 'uga-rosa/ddc-source-lsp-setup'
 depends = ['ddc-source-lsp']
-on_source = ['nvim-lspconfig']
+on_source = ['nvim-lspconfig', 'ddc.vim']
 
 [[plugins]]
 repo = 'glepnir/lspsaga.nvim'
@@ -102,24 +102,21 @@ hook_source = '''
 
 [[plugins]]
 repo = 'matsui54/denops-signature_help'
-depends = ['denops.vim']
-on_event = ['BufRead', 'InsertEnter']
+on_source = ['denops.vim']
 hook_source = '''
     call signature_help#enable()
 '''
 
 [[plugins]]
 repo = 'matsui54/denops-popup-preview.vim'
-depends = ['denops.vim']
-on_event = ['BufRead', 'InsertEnter']
+on_source = ['denops.vim']
 hook_source = '''
     call popup_preview#enable()
 '''
 
 [[plugins]]
 repo = 'skanehira/denops-translate.vim'
-depends = ['denops.vim']
-on_event = ['BufRead', 'InsertEnter']
+on_source = ['denops.vim']
 hook_source = '''
     nmap <Leader>tr <Plug>(Translate)
     vmap <Leader>tr <Plug>(Translate)
@@ -127,7 +124,7 @@ hook_source = '''
 
 [[plugins]]
 repo = 'folke/trouble.nvim'
-on_event = ['CmdlineEnter', 'CursorMoved']
+on_event = ['InsertEnter', 'BufReadPost', 'BufNewFile']
 hook_source = '''
     nnoremap <C-l>t :TroubleToggle<CR>
 '''
@@ -183,12 +180,11 @@ hook_source = '''
 
 [[plugins]]
 repo = 'Shougo/pum.vim'
-on_event = 'InsertEnter'
-depends = ['vim-vsnip']
+on_source = ['ddc.vim']
 
 [[plugins]]
 repo = 'hrsh7th/vim-vsnip'
-on_event = 'InsertEnter'
+on_source = ['ddc.vim']
 hook_source = '''
     imap <expr> <C-k> vsnip#expandable() ? '<Plug>(vsnip-expand)' : '<C-k>'
     smap <expr> <C-k> vsnip#expandable() ? '<Plug>(vsnip-expand)' : '<C-k>'
@@ -205,7 +201,7 @@ on_source = ['vim-vsnip']
 
 [[plugins]]
 repo = 'osyo-manga/vim-precious'
-on_event = 'CursorMoved'
+on_event = ['InsertEnter', 'BufReadPost', 'BufNewFile']
 hook_source = '''
     let g:precious_enable_switch_CursorMoved = {
         \ '*': 0,
@@ -278,12 +274,11 @@ on_ft = 'csv'
 
 [[plugins]]
 repo = 'kshenoy/vim-signature'
-on_cmd = ['SignatureToggleSigns', 'SignatureRefresh', 'SignatureListBufferMarks', 'SignatureListGlobalMarks', 'SignatureListMarkers']
-on_func = 'signature#'
+on_event = ['InsertEnter', 'BufReadPost', 'BufNewFile']
 
 [[plugins]]
 repo = 'kevinhwang91/nvim-hlslens'
-on_event = ['BufRead', 'CursorHold']
+on_event = ['InsertEnter', 'BufReadPost', 'BufNewFile']
 lua_source = '''
 require('hlslens').setup()
 local opts = {noremap = true, silent = true}
@@ -307,7 +302,7 @@ on_event = ['CursorMoved']
 
 [[plugins]]
 repo = 'Yggdroot/indentLine'
-on_event = ['BufRead', 'CursorHold']
+on_event = ['InsertEnter', 'BufReadPost', 'BufNewFile']
 hook_source = '''
     let g:indentLine_setConceal = 0
     let g:indentLine_char = '¦'
@@ -315,14 +310,14 @@ hook_source = '''
 
 [[plugins]]
 repo = 'bronson/vim-trailing-whitespace'
-on_event = ['BufRead', 'CursorHold']
+on_event = ['InsertEnter', 'BufReadPost', 'BufNewFile']
 hook_source = '''
     let g:extra_whitespace_ignored_filetypes = ['', 'ddu-filer', 'ddu-ff', 'mason', 'lspsagafinder']
 '''
 
 [[plugins]]
 repo = 'tpope/vim-commentary'
-on_event = ['BufRead', 'CursorHold']
+on_event = ['InsertEnter', 'BufReadPost', 'BufNewFile']
 hook_source = '''
     augroup commentary
         autocmd!
@@ -333,25 +328,25 @@ hook_source = '''
 
 [[plugins]]
 repo = 'easymotion/vim-easymotion'
-on_event = ['BufRead', 'CursorHold']
+on_event = ['InsertEnter', 'BufReadPost', 'BufNewFile']
 hook_source = '''
     let g:EasyMotion_smartcase = 1
 '''
 
 [[plugins]]
 repo = 'terryma/vim-multiple-cursors'
-on_event = ['BufRead', 'CursorHold']
+on_event = ['InsertEnter', 'BufReadPost', 'BufNewFile']
 
 [[plugins]]
 repo = 'norcalli/nvim-colorizer.lua'
-on_event = ['BufRead', 'CursorHold']
+on_event = ['InsertEnter', 'BufReadPost', 'BufNewFile']
 lua_source = '''
     require('colorizer').setup()
 '''
 
 [[plugins]]
 repo = 'lewis6991/gitsigns.nvim'
-on_event = 'VimEnter'
+on_event = ['BufEnter']
 hook_source = 'source ~/dotfiles/.vim/lua/gitsigns.lua'
 
 [[plugins]]
@@ -395,18 +390,7 @@ hook_add = '''
 
 [[plugins]]
 repo = 'simrat39/rust-tools.nvim'
-on_source = ['mason.nvim']
-
-[[plugins]]
-repo = 'nvim-lua/plenary.nvim'
-on_event = ['CursorHold', 'CmdlineEnter']
-
-# [[plugins]]
-# repo = 'hrsh7th/nvim-cmp'
-# on_source = 'plenary.nvim'
-# lua_source = '''
-#     require('cmp').setup()
-# '''
+on_ft = ['rust']
 
 # [[plugins]]
 # repo = 'epwalsh/obsidian.nvim'
@@ -446,24 +430,23 @@ hook_source = '''
 
 [[plugins]]
 repo = 'lambdalisue/kensaku.vim'
-depends = ['denops.vim']
-on_source = ['kensaku_search.vim']
+on_source = ['denops.vim']
 
 [[plugins]]
 repo = 'lambdalisue/kensaku-search.vim'
-depends = ['denops.vim', 'kensaku.vim']
 on_map = '<Plug>(kensaku-'
+on_source = ['kensaku_search.vim']
 
 [[plugins]]
 repo = 'shellRaining/hlchunk.nvim'
-on_event = ['BufReadPre', 'BufNewFile']
+on_event = ['InsertEnter', 'BufReadPost', 'BufNewFile']
 lua_source = '''
 require('hlchunk').setup({})
 '''
 
 [[plugins]]
 repo = 'mbbill/undotree'
-on_event = ['BufReadPre', 'BufNewFile']
+on_event = ['InsertEnter', 'BufReadPost', 'BufNewFile']
 
 [[plugins]]
 repo = 'stevearc/oil.nvim'
@@ -478,7 +461,7 @@ vim.keymap.set("n", "<Leader>o", "<Cmd>Oil<CR>", {desc = "Open parent directory"
 
 [[plugins]]
 repo = 'Robitx/gp.nvim'
-on_event = ['VimEnter']
+on_event = ['BufEnter']
 lua_source = '''
 -- key mappings
 local function keymapOptions(desc)
@@ -631,13 +614,8 @@ vim.api.nvim_command("source " .. gpNvimScriptFilePath)
 '''
 
 [[plugins]]
-repo = 'stevearc/dressing.nvim'
-on_event = ['VimEnter']
-
-[[plugins]]
 repo = 'olimorris/codecompanion.nvim'
-on_event = ['VimEnter']
-depends = ['plenary.nvim']
+on_event = ['BufEnter']
 lua_source = '''
 local function LoadTextFile(fileName)
     local home_dir = os.getenv('HOME')
@@ -742,8 +720,7 @@ wk.add({
 repo = 'yetone/avante.nvim'
 build = 'powershell -ExecutionPolicy Bypass -File Build.ps1 -BuildFromSource false'
 on_cmd = ['AvanteAsk']
-on_source = ['dressing.nvim', 'plenary.nvim', 'nui.nvim']
-on_event = ['VimEnter']
+on_event = ['BufEnter']
 lua_source = '''
 require('avante_lib').load()
 require('avante').setup({
@@ -768,6 +745,13 @@ require('avante').setup({
 '''
 
 [[plugins]]
-repo = 'MunifTanjim/nui.nvim'
-on_event = ['VimEnter']
+repo = 'stevearc/dressing.nvim'
+on_source = ['avante.nvim']
 
+[[plugins]]
+repo = 'MunifTanjim/nui.nvim'
+on_source = ['avante.nvim']
+
+[[plugins]]
+repo = 'nvim-lua/plenary.nvim'
+on_source = ['avante.nvim', 'codecompanion.nvim']
