--- a/.vim/toml/treesitter_lazy.toml
+++ b/.vim/toml/treesitter_lazy.toml
@@ -1,6 +1,6 @@
 [[plugins]]
 repo = 'nvim-treesitter/nvim-treesitter'
-on_event = 'CursorHold'
+on_event = ['InsertEnter', 'BufReadPost', 'BufNewFile']
 on_cmd = ['TSUpdate', 'TSUpdateSync']
 hook_source = 'source ~/dotfiles/.vim/lua/nvim-treesitter.lua'
 
