--- a/.vim/toml/dpp_lazy.toml
+++ b/.vim/toml/dpp_lazy.toml
@@ -11,9 +11,18 @@ repo = 'Shougo/dpp-ext-toml'
 on_source = ['dpp.vim']
 
 [[plugins]]
+repo = 'Shougo/dpp-ext-lazy'
+on_source = ['dpp.vim']
+
+[[plugins]]
 repo = 'Shougo/dpp-ext-local'
+on_source = ['dpp.vim']
+
+[[plugins]]
+repo = 'staticWagomU/dpp-ext-lua'
 on_source = ['dpp.vim']
 
 [[plugins]]
 repo = 'Shougo/dpp-protocol-git'
 on_source = ['dpp.vim']
+
