--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -558,7 +558,7 @@ local conf = {
             provider = "googleai",
             chat = true,
             command = true,
-            model = {model = "gemini-1.5-pro-002", top_k = 40},
+            model = {model = "gemini-2.0-pro-exp-02-05", top_k = 40},
             system_prompt = general_system_prompt,
         },
         {
@@ -566,7 +566,15 @@ local conf = {
             provider = "googleai",
             chat = true,
             command = true,
-            model = {model = "gemini-2.0-flash-exp", top_k = 40},
+            model = {model = "gemini-2.0-flash-001", top_k = 40},
+            system_prompt = general_system_prompt,
+        },
+        {
+            name = "Gemini-Flash-Lite",
+            provider = "googleai",
+            chat = true,
+            command = true,
+            model = {model = "gemini-2.0-flash-lite-preview-02-05", top_k = 40},
             system_prompt = general_system_prompt,
         },
         {
@@ -663,10 +671,10 @@ require('codecompanion').setup({
             return require('codecompanion.adapters').extend('gemini', {
                 schema = {
                     model = {
-                        default = "gemini-2.0-flash-exp",
+                        default = "gemini-2.0-flash-001",
                         choices = {
-                            "gemini-2.0-flash-exp",
-                            "gemini-1.5-pro-002",
+                            "gemini-2.0-flash-001",
+                            "gemini-2.0-pro-exp-02-05",
                             "gemini-exp-1206",
                         },
                     },
@@ -752,7 +760,7 @@ require('avante_lib').load()
 require('avante').setup({
     provider = "gemini",
     auto_suggestions_provider = "gemini",
-    gemini = {model = "gemini-2.0-flash-exp"},
+    gemini = {model = "gemini-2.0-flash-001"},
     behavior = {
         auto_suggestions = false,
         auto_set_highlight_group = true,
