--- a/.vim/toml/ai_lazy.toml
+++ b/.vim/toml/ai_lazy.toml
@@ -208,6 +208,7 @@ require('codecompanion').setup({
                         default = "gemini-2.0-flash-001",
                         choices = {
                             "gemini-2.0-flash-001",
+                            "gemini-2.0-flash-thinking-exp-01-21",
                             "gemini-2.0-pro-exp-02-05",
                             "gemini-exp-1206",
                         },
