fix: add hook_post_update config for avante.nvim to build modules in every update

--- a/.vim/toml/ai_lazy.toml
+++ b/.vim/toml/ai_lazy.toml
@@ -231,6 +231,7 @@ require('codecompanion').setup({
 
 [[plugins]]
 repo = 'yetone/avante.nvim'
+hook_post_update = 'pwsh -ExecutionPolicy Bypass -File Build.ps1 -BuildFromSource false'
 build = 'pwsh -ExecutionPolicy Bypass -File Build.ps1 -BuildFromSource false'
 on_cmd = ['AvanteAsk', 'AvanteChat', 'AvanteEdit', 'AvanteFocus', 'AvanteRefresh', 'AvanteShowRepoMap', 'AvanteToggle']
 lua_add = '''
