--- a/.vim/toml/ai_lazy.toml
+++ b/.vim/toml/ai_lazy.toml
@@ -247,12 +247,14 @@ require('avante_lib').load()
 require('avante').setup({
     provider = "gemini",
     auto_suggestions_provider = "gemini",
+    cursor_applying_provider = "gemini",
     gemini = {model = "gemini-2.0-flash-001"},
     behavior = {
         auto_suggestions = false,
         auto_set_highlight_group = true,
         auto_set_keymaps = true,
         auto_apply_diff_after_generation = true,
+        enable_cursor_planning_mode = true,
     },
     vendors = {
         ollama = {
