--- a/.vim/toml/ai_lazy.toml
+++ b/.vim/toml/ai_lazy.toml
@@ -92,7 +92,7 @@ local conf = {
             provider = "googleai",
             chat = true,
             command = true,
-            model = {model = "gemini-2.0-pro-exp-02-05", top_k = 40},
+            model = {model = "gemini-2.5-pro-exp-03-25", top_k = 40},
             system_prompt = general_system_prompt,
         },
         {
@@ -108,7 +108,7 @@ local conf = {
             provider = "googleai",
             chat = true,
             command = true,
-            model = {model = "gemini-2.0-flash-lite-preview-02-05", top_k = 40},
+            model = {model = "gemini-2.0-flash-lite", top_k = 40},
             system_prompt = general_system_prompt,
         },
         {
@@ -201,7 +201,7 @@ require('codecompanion').setup({
                         choices = {
                             "gemini-2.0-flash",
                             "gemini-2.0-flash-thinking-exp-01-21",
-                            "gemini-2.0-pro-exp-02-05",
+                            "gemini-2.5-pro-exp-03-25",
                         },
                     },
         }})end,
@@ -257,7 +257,7 @@ require('avante').setup({
     vendors = {
         gemini_pro = {
             __inherited_from = "gemini",
-            model = "geminigemini-2.0-pro-exp-02-05",
+            model = "geminigemini-2.5-pro-exp-03-25",
         },
         gemini_thinking = {
             __inherited_from = "gemini",
@@ -283,5 +283,5 @@ on_source = ['avante.nvim', 'codecompanion.nvim']
 
 [[plugins]]
 repo = 'MunifTanjim/nui.nvim'
-on_source = ['avante.nvim']
+on_source = ['avante.nvim', 'codecompanion.nvim']
 
